edit Pattern#index layout.

--- a/app/assets/stylesheets/common/patterns.scss
+++ b/app/assets/stylesheets/common/patterns.scss
@@ -65,6 +65,7 @@
       color: limegreen;
       background-color: black;
       line-height: 0.6em;
+      layout-grid-mode: both;
     }
     &--lifeGameInterface {
       padding: 0 20px;
