--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -2,5 +2,7 @@
 <p>Find me in app/views/homes/top.html.erb</p>
 <p>
   <%= link_to 'DisplayFormat#new', new_display_format_path %><br>
-  <%= link_to 'DisplayFormat#edit_1', edit_display_format_path( 1 ) %>
+  <%= link_to 'DisplayFormat#edit_1', edit_display_format_path( 1 ) %><br>
+  <%= link_to 'DisplayFormat#edit_2', edit_display_format_path( 2 ) %><br>
+  <%= link_to 'DisplayFormat#edit_3', edit_display_format_path( 3 ) %><br>
 </p>
