--- a/app/views/display_formats/edit.html.erb
+++ b/app/views/display_formats/edit.html.erb
@@ -1,2 +1,6 @@
 
+<!--投稿フォームの呼び出し-->
 <%= render 'display_formats/form', display_format: @display_format %>
+
+<!--ライフゲームエミュレート画面-->
+<%= render 'patterns/emulation' %>
