--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,8 +1,3 @@
 <h1>Homes#top</h1>
 <p>Find me in app/views/homes/top.html.erb</p>
-<p>
-  <%= link_to 'DisplayFormat#new', new_display_format_path %><br>
-  <%= link_to 'DisplayFormat#edit_1', edit_display_format_path( 1 ) %><br>
-  <%= link_to 'DisplayFormat#edit_2', edit_display_format_path( 2 ) %><br>
-  <%= link_to 'DisplayFormat#edit_3', edit_display_format_path( 3 ) %><br>
-</p>
+<p><%= link_to 'DisplayFormat#index', display_formats_path %></p>
