--- a/app/views/display_formats/_form_preview_script.html.erb
+++ b/app/views/display_formats/_form_preview_script.html.erb
@@ -17,6 +17,7 @@
         cssOptions : {
           fontColor: $("#display_format_font_color").val(),
           backgroundColor: $("#display_format_background_color").val(),
+          fontSize: $("#display_format_font_size").val(),
           lineHeightRate: $("#display_format_line_height_rate").val(),
           letterSpacing: $("#display_format_letter_spacing").val()
         }
