Build up DisplayFormats

--- a/app/views/display_formats/new.html.erb
+++ b/app/views/display_formats/new.html.erb
@@ -1,2 +1,6 @@
-
+<!--投稿フォームの呼び出し-->
 <%= render 'display_formats/form', display_format: @display_format %>
+<%= render 'display_formats/call_edit', display_formats: @display_formats %>
+
+<!--ライフゲームエミュレート画面-->
+<%= render 'patterns/emulation' %>
