--- a/app/views/patterns/new.html.erb
+++ b/app/views/patterns/new.html.erb
@@ -6,5 +6,5 @@
   <%= render 'patterns/form', pattern: @pattern %>
 </div>
 
-<!--登校前パターンのプレビュー（エミュレート）画面-->
+<!--投稿前パターンのプレビュー（エミュレート）画面-->
 <%= render 'patterns/emulation' %>
