--- a/app/assets/stylesheets/common/display_formats.scss
+++ b/app/assets/stylesheets/common/display_formats.scss
@@ -1,5 +1,6 @@
 .display_formats {
   &__form {
+    margin-top: 70px;
     &--cellsConditions {
       width: 40px;
       text-align: center;
@@ -10,6 +11,9 @@
     }
     &--submit {
       text-align: right;
+    }
+    &--callEdit {
+      margin-left: 70%;
     }
   }
 }
