--- a/app/views/display_formats/_form.html.erb
+++ b/app/views/display_formats/_form.html.erb
@@ -1,6 +1,4 @@
-<div class="test"></div>
-
-<%= form_with model: display_format, class: "form-horizontal" do | f | %>
+<%= form_with model: display_format, class: "form-horizontal display_formats__form" do | f | %>
 
 <!--ヘッダ-->
 <div class="form-group">
@@ -29,7 +27,7 @@
     <%= f.text_field :alive, maxlength: 1, size: 8, placeholder: "1文字", class: "display_formats__form--cellsConditions" %>
     ／
     <%= f.label :dead, '「死」：' %>
-    <%= f.text_field :dead, maxlength: 1, size: 8, placeholder: "1文字", class: "display_formats__form--cellsConditions" %>
+    <%= f.text_field :dead, maxlength: 1, size: 8, placeholder: "1文字", class: "display_formats__form--cellsConditions" %><br>
     （注意：文字の組み合わせによっては、表示にズレが発生しますのでご注意ください。）
   </div>
 </div>
@@ -68,7 +66,7 @@
 
 <!--送信ボタン-->
 <p class="display_formats__form--submit">
-  <%= f.submit ( /new/.match?( action_name ) ? "作成" : "編集完了" ), class: "btn btn-default", data: { confirm: "保存しますか？" } %>
+  <%= f.submit ( /new/.match?( action_name ) ? "投稿" : "編集完了" ), class: "btn btn-default", data: { confirm: "保存しますか？" } %>
   <!--このフォーマットが使用されていない場合に限り削除可能とする-->
   <% if  action_name == 'edit' && ! display_format.used? then %>
   <%= link_to "このフォーマットを削除", display_format_path( display_format ), method: :delete, data: { confirm: "本当に削除してもよろしいですか？" }, class: "btn btn-danger" %>
