--- a/app/views/layouts/_header_menue.html.erb
+++ b/app/views/layouts/_header_menue.html.erb
@@ -34,19 +34,24 @@
           　メニュー
         </li>
         <li>
-          <!--パターン新規作成ページへのリンク-->
-          <%= content_tag :span, '', class: "glyphicon glyphicon-plus", aria: { hidden: true } %>
-          <%= link_to "　パターン作成", edit_making_path %>
-        </li>
-        <li>
           <!--ログインユーザ中のページへのリンク-->
           <%= content_tag :span, '', class: "glyphicon glyphicon-user", aria: { hidden: true } %>
           <%= link_to "　マイページ", member_path( current_user ) %>
         </li>
         <li>
+          <!--パターン新規作成ページへのリンク-->
+          <%= content_tag :span, '', class: "glyphicon glyphicon-plus", aria: { hidden: true } %>
+          <%= link_to "　パターン作成", edit_making_path %>
+        </li>
+        <li>
+          <!--セルの表示形式編集用リンク-->
+          <%= content_tag :i, "", class: "fas fa-th-large" %>
+          <%= link_to "　セルの表示編集", new_display_format_path %>
+        </li>
+        <li>
           <!--ログアウト用リンク-->
           <%= content_tag :span, '', class: "glyphicon glyphicon-share", aria: { hidden: true } %>
-          <%= link_to "　ログアウト", destroy_user_session_path, method: :delete %>
+          <%= link_to "　ログアウト", destroy_user_session_path, method: :delete, data: { confirm: "ログアウトしてよろしいですか？" } %>
         </li>
       </ul>
     </li>
