--- a/app/views/patterns/_emulation.html.erb
+++ b/app/views/patterns/_emulation.html.erb
@@ -1,9 +1,11 @@
 <!--ライフゲーム実行用部分テンプレート-->
 
-<!--操作ボタン類-->
+<!--操作ボタン類（トップページでは表示しない）-->
+<% unless /home/.match?( controller_name ) then %>
 <div class="patterns__show--lifeGameInterface">
   <%= render 'patterns/interface' %>
 </div>
+<% end %>
 
 <p class="patterns__show--lifeGameInfo">
   (ここに世代情報が表示されます)
