--- a/app/assets/stylesheets/common/members.scss
+++ b/app/assets/stylesheets/common/members.scss
@@ -18,6 +18,7 @@
       vertical-align: bottom;
     }
     &--img {
+      background-color: black;
       max-height: 150px;
       display: inline-block;
       padding: 5px;
