--- a/app/views/layouts/_header_menue.html.erb
+++ b/app/views/layouts/_header_menue.html.erb
@@ -14,7 +14,7 @@
   </ul>
   <ul class="application__header--interface">
     <li><%= link_to "トップ", root_path %></li>
-    <li><%= link_to "PCPLGとは？", about_path %></li>
+    <li><%= link_to "ライフゲームとは？", about_path %></li>
     <li><%= link_to "投稿一覧", patterns_path %></li>
 
     <% if user_signed_in? then %>
