--- a/app/assets/stylesheets/user.scss
+++ b/app/assets/stylesheets/user.scss
@@ -17,3 +17,15 @@
 
  @import "bootstrap-sprockets";
  @import "bootstrap";
+
+.devise {
+  &__common {
+    padding: 10px 30px;
+    background: radial-gradient( white, silver );
+    border: medium solid #888;
+    border-radius: 20px;
+    &--headline {
+      margin: 1em 20px;
+    }
+  }
+}
