--- a/app/views/users/passwords/new.html.erb
+++ b/app/views/users/passwords/new.html.erb
@@ -1,16 +1,19 @@
-<h2>Forgot your password?</h2>
+<div class="form-horizontal devise__common">
+  <h2 class="devise__common--headline">パスワード再発行</h2>
+  <p>アカウントのメールアドレスを入力して「パスワードを変更する」を押してください。</p>
 
-<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
+<%= form_for( resource, as: resource_name, url: user_password_path, html: { method: :post } ) do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+  <div class="form-group">
+    <%= f.label :email, 'Eメール', class: "col-sm-2" %>
+    <%= f.email_field :email, autofocus: true, autocomplete: "email", class: "col-sm-3 registrations__new--form" %>
   </div>
 
-  <div class="actions">
-    <%= f.submit "Send me reset password instructions" %>
-  </div>
+  <p class="passwords__new--submitForm">
+    <%= f.submit "パスワードを変更する", class: "btn btn-warning" %>
+  </p>
 <% end %>
 
-<%= render "devise/shared/links" %>
+<%= render "users/shared/links" %>
+</div>
