--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -1,34 +1,42 @@
-<h2>Sign up</h2>
-
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+<div class="form-horizontal devise__common">
+  <h2 class="devise__common--headline">
+    <%= content_tag :i, '', class: "fas fa-user-plus" %>
+    新規ユーザ登録
+  </h2>
+  <%= form_for( resource, as: resource_name, url: user_registration_path ) do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
-  </div>
-  
-  <div class="field">
-    <%= f.label :name %><br />
-    <%= f.text_field :name, autocomplete: "name" %>
+  <div class="form-group">
+    <%= f.label :email, 'Eメール', class: "col-sm-2" %>
+    <%= f.email_field :email, autofocus: true, autocomplete: "email", class: "col-sm-3 registrations__new--form" %>
   </div>
 
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
+  <div class="form-group">
+    <%= f.label :name, 'ニックネーム', class: "col-sm-2" %>
+    <%= f.text_field :name, autocomplete: "name", class: "col-sm-3 registrations__new--form" %>
   </div>
 
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
+  <div class="form-group">
+    <div class="col-sm-2">
+      <%= f.label :password, 'パスワード' %>
+      <% if @minimum_password_length then %>
+      <br><%= "（#{@minimum_password_length}文字以上）" %>
+      <% end %>
+    </div>
+    <%= f.password_field :password, autocomplete: "new-password", class: "col-sm-3 registrations__new--form" %>
   </div>
 
-  <div class="actions">
-    <%= f.submit "Sign up" %>
+  <div class="form-group">
+    <%= f.label :password_confirmation, 'パスワード再入力', class: "col-sm-2" %>
+    <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "col-sm-3 registrations__new--form" %>
   </div>
-<% end %>
 
-<%= render "devise/shared/links" %>
+  <p class="registrations__new--submitForm">
+    <%= f.submit "新規登録", class: "btn sessions__new--submitButton" %>
+  </p>
+  <% end %>
+
+  <div class="">
+    <%= render "users/shared/links" %>
+  </div>
+</div>
