Update codes about controllers and helpers

--- a/app/assets/stylesheets/common/patterns.scss
+++ b/app/assets/stylesheets/common/patterns.scss
@@ -13,6 +13,11 @@
       text-align: right;
     }
   }
+  &__index {
+    &--emptyBody {
+        padding: 20px;
+    }
+  }
   &__edit {
     margin-bottom: 50px;
     &--enterButton {}
