--- a/app/views/patterns/_form.html.erb
+++ b/app/views/patterns/_form.html.erb
@@ -1,6 +1,6 @@
 <!--入力フォーム用部分テンプレート-->
 
-<%= form_with model: @pattern, class: "form-horizontal" do | f | %>
+<%= form_with( model: @pattern, class: "form-horizontal" ) do | f | %>
 
 <!--パターン名（入力必須）-->
 <div class="form-group">
