--- a/app/assets/stylesheets/user.scss
+++ b/app/assets/stylesheets/user.scss
@@ -18,14 +18,122 @@
  @import "bootstrap-sprockets";
  @import "bootstrap";
 
-.devise {
-  &__common {
-    padding: 10px 30px;
-    background: radial-gradient( white, silver );
-    border: medium solid #888;
-    border-radius: 20px;
-    &--headline {
-      margin: 1em 20px;
-    }
-  }
-}
+ /*common*/
+ * {
+   margin: 0;
+   padding: 0;
+   box-sizing: border-box;
+ }
+
+ .clearfix::after {
+   content: "";
+   display: block;
+   clear: both;
+ }
+
+ header {
+   color: white;
+   background-color: black;
+   min-height: 10em;
+   padding: 10px 30px;
+   margin-bottom: 40px;
+   h1 {
+     color: limegreen;
+   }
+   nav {
+     position: absolute;
+     top: 2em;
+     right: 1em;
+   }
+   img {
+     border: thin solid dimgray;
+     background-color: black;
+   }
+   a {
+     color: white;
+     text-decoration: none;
+     &:hover {
+       color: yellow;
+       text-decoration: none;
+     }
+   }
+ }
+
+ body {
+   background-color: #eee;
+ }
+
+
+ footer {
+   height: 150px;
+   width: 100%;
+   background-color: black;
+   color: #fff;
+   margin-top: 30px;
+ }
+
+ #menue-parent {
+   position: relative;
+   text-align: left;
+   &:hover {
+     #menue-child {
+       display: block;
+     }
+   }
+ }
+
+ #menue-child {
+   display: none;
+   position: absolute;
+   top: 100%;
+   right: 0;
+   text-align: left;
+   background-color: white;
+   li {
+     display: block;
+     width: 180px;
+     margin: 0;
+     border: thin solid black;
+     border-top: none;
+     padding: 2px 10px;
+     color: black;
+     &:hover {
+       color: black;
+     }
+     &:first-child {
+       background-color: #aaa;
+     }
+     a {
+       color: black;
+       &:hover {
+         color: purple;
+         text-decoration: none;
+       }
+     }
+   }
+ }
+
+ .devise {
+   &__common {
+     padding: 10px 30px;
+     background: radial-gradient( white, silver );
+     border: medium solid #888;
+     border-radius: 20px;
+     &--headline {
+       margin: 1em 20px;
+     }
+   }
+ }
+
+ .btn {
+   &-originGreen {
+     color: white;
+     background-color: darkgreen;
+     &:hover {
+       color: whitesmoke;
+     }
+     &:focus {
+       color: whitesmoke;
+     }
+   }
+ }
