--- a/app/views/display_formats/_form.html.erb
+++ b/app/views/display_formats/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with model: display_format, class: "form-horizontal display_formats__form" do | f | %>
+<%= form_with( model: display_format, class: "form-horizontal display_formats__form" ) do | f | %>
 
 <!--ヘッダ-->
 <div class="form-group">
