--- a/app/views/makings/_edit_helper.html.erb
+++ b/app/views/makings/_edit_helper.html.erb
@@ -1,41 +1,49 @@
 <!--作成中パターンの操作用インターフェース-->
 
-<!--提出前・動作チェック前パターンの適性チェック用アクション-->
-<button type="button" class="btn btn-primary makings__edit--verification" onclick="verificationMakingPattern();">
-	検証
-</button>
+<!-- タブ・メニュー -->
+<ul class="nav nav-tabs makings__edit--tabNav">
+	<li class="makings__edit--tabLi active"><a href="#sampleContentA" data-toggle="tab">パターンの検証</a></li>
+	<li class="makings__edit--tabLi"><a href="#sampleContentB" data-toggle="tab">一括処理</a></li>
+	<li class="makings__edit--tabLi"><a href="#sampleContentC" data-toggle="tab">特殊処理</a></li>
+	<li class="makings__edit--tabLi"><a href="#sampleContentD" data-toggle="tab">パターンの初期化</a></li>
+</ul>
 
-<!--パターン加工処理-->
-<div class="btn-group">
-	<!--ドロップダウンボタンの表示-->
-	<button type="button" class="btn btn-danger">
-		一括処理
-	</button>
+<!-- タブ内容 -->
+<div class="tab-content">
+	<div class="tab-pane makings__edit--tabCommon active" id="sampleContentA">
+		<!--提出前・動作チェック前パターンの適性チェック用アクション-->
+		<button type="button" class="btn btn-primary makings__edit--verification" onclick="verificationMakingPattern();">
+			検証
+		</button>
 
-	<!--ドロップダウン表示アクション-->
-	<button type="button" class="btn btn-danger dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
-		<span class="caret"></span>
-	</button>
+    <!--「変更を保存」ボタンはdisplay: none;がデフォルト設定-->
+    <%= f.submit '変更を保存', id: "makings__edit--update", class: "btn btn-success" %>
+	</div>
 
-	<!--ドロップダウンリスト-->
-	<ul class="dropdown-menu" role="menu">
-		<!--(1)ビット列の短い行に対する、「右側」への"0"の補完処理-->
-		<li role="presentation">
-			<a role="menuitem" tabindex="-1" href="#" onclick="autoComplement( 'right' ); return false;">
-				自動補完（右側）
-			</a>
-		</li>
-		<!--(2)ビット列の短い行に対する、「左側」への"0"の補完処理-->
-		<li role="presentation">
-			<a role="menuitem" tabindex="-1" href="#" onclick="autoComplement( 'left' ); return false;">
-				自動補完（左側）
-			</a>
-		</li>
-		<!--(3)作成中のパターンを初期化-->
-		<li role="presentation" class="makings__edit--destroy" id="unko">
-			<%= link_to making_path, method: :delete, role: "menuitem", tabindex:"-1", "data-confirm" => "作成中のパターンを初期化しますか？", role: "menuitem", tabindex: -1 do %>
+	<div class="tab-pane makings__edit--tabCommon" id="sampleContentB">
+		<!--(1)ビット列の短い行に対する、「左側」への"0"の補完処理-->
+		<button type="button" class="btn btn-originGreen" onclick="autoComplement( 'left' );">
+			自動補完（左側）
+		</button>
+		<!--(2)ビット列の短い行に対する、「右側」への"0"の補完処理-->
+		<button type="button" class="btn btn-originGreen" onclick="autoComplement( 'right' );">
+			自動補完（右側）
+		</button>
+	</div>
+
+	<div class="tab-pane makings__edit--tabCommon" id="sampleContentC">
+		<!--回転アクション-->
+		<button type="button" class="btn btn-originGreen" onclick="patternRotation();">
+			<%= content_tag :i, ' 反時計回りに回転', class: "fas fa-undo" %>
+		</button>
+	</div>
+
+	<div class="tab-pane makings__edit--tabCommon" id="sampleContentD">
+		<!--作成中のパターンを初期化-->
+		<p class="makings__edit--destroyTab">
+			<%= link_to making_path, method: :delete, "data-confirm" => "作成中のパターンを初期化しますか？" do %>
 			<%= content_tag :i, 'パターンを初期化', class:"fas fa-bomb"%>
 			<% end %>
-		</li>
-	</ul>
+		</p>
+	</div>
 </div>
