--- a/app/views/members/_detail.html.erb
+++ b/app/views/members/_detail.html.erb
@@ -3,7 +3,7 @@
 <% if action_name == "edit" then %>
 <!--編集時用テンプレート-->
 
-<%= form_with model: user, url: member_path( user ), class: "members__edit" do | f | %>
+<%= form_with( model: user, url: member_path( user ), class: "members__edit" ) do | f | %>
 <!--ユーザID-->
 <%= f.hidden_field :id, value: current_user.id, readonly: true %>
 <!--プロフィール画像-->
