--- a/app/views/patterns/show.html.erb
+++ b/app/views/patterns/show.html.erb
@@ -45,7 +45,7 @@
     <!--コメント投稿フォーム（ログインユーザのみ表示）-->
     <% if user_signed_in? then %>
     <div class="comments__form">
-      <%= form_with url: pattern_post_comment_path( @pattern ) do | f |%>
+      <%= form_with( url: pattern_post_comment_path( @pattern ) ) do | f |%>
       <%= f.text_area :body, class: "comments__form--body", rows: 3 %>
       <%= f.submit '投稿', class: "btn btn-default comments__form--submit" %>
       <% end %>
