--- a/app/assets/stylesheets/admin/application.scss
+++ b/app/assets/stylesheets/admin/application.scss
@@ -1,35 +1,9 @@
-/*
- * This is a manifest file that'll be compiled into application.css, which will include all the files
- * listed below.
- *
- * Any CSS and SCSS file within this directory, lib/assets/stylesheets, or any plugin's
- * vendor/assets/stylesheets directory can be referenced here using a relative path.
- *
- * You're free to add application-wide styles to this file and they'll appear at the bottom of the
- * compiled file so the styles you add here take precedence over styles defined in any other CSS/SCSS
- * files in this directory. Styles in this file should be added after the last require_* statement.
- * It is generally better to create a new file per style scope.
- *
- *= require_tree .
- *= require_self
- */
-
-h1 {
-  color: blue;
-}
-
-footer {
-  nav {
-  ul {
-    text-align: center;
-    li {
-      padding: 5px;
-      display: inline-block;
-      list-style: none;
-      h4 {
-        color: yellow;
-      }
+.application {
+  &__errors {
+    &--textField {
+      border: thin solid red !important;
+      background-border: rgba( 100, 0, 0, 0.2 ) !important;
+      background-color: rgba( 255, 0, 0, 0.1 ) !important;
     }
   }
-}
 }
