--- a/app/assets/stylesheets/admin/categories.scss
+++ b/app/assets/stylesheets/admin/categories.scss
@@ -1,3 +1,16 @@
-// Place all the styles related to the Categories controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+.categories {
+  &__form {
+    &--submitField {
+      text-align: right;
+    }
+  }
+  &__index {
+    &--tableTd {
+      padding: 10px 0;
+      text-align: center;
+    }
+    &--headline {
+      text-indent: 3em;
+    }
+  }
+}
