--- a/app/views/makings/_edit_helper.html.erb
+++ b/app/views/makings/_edit_helper.html.erb
@@ -18,6 +18,11 @@
 
     <!--「変更を保存」ボタンはdisplay: none;がデフォルト設定-->
     <%= f.submit '変更を保存', id: "makings__edit--update", class: "btn btn-success" %>
+		
+		<!--パターン新規作成画面への移動アクション-->
+		<%= link_to new_pattern_path, id: "patterns__new", class: "btn btn-default" do %>
+		<%= content_tag :span, ' このパターンを投稿する（パターン情報入力ページへ）', class: "glyphicon glyphicon-pencil", aria: { hidden: true } %>
+		<% end %>
 	</div>
 
 	<div class="tab-pane makings__edit--tabCommon" id="sampleContentB">
