--- a/app/views/makings/update.js.erb
+++ b/app/views/makings/update.js.erb
@@ -7,5 +7,5 @@ callMessageWindow( "danger", "<%= @convertion_error_message || @making.errors.fu
 // 作成中パターンのデータ更新成功の通知
 callMessageWindow( "success", "更新に成功しました。" );
 // インターフェース（ボタン類）の復活
-displayInterface( false, true );
+displayInterface( true, true );
 <% end %>
