--- a/app/views/admin/layouts/application.html.erb
+++ b/app/views/admin/layouts/application.html.erb
@@ -9,15 +9,15 @@
   </head>
 
   <header>
-    <h1>（管理者）</h1>
+    <h1>PlayCreatePublishLifeGame_管理者ページ</h1>
 
     <nav>
-    <ul>
-      <li><%= link_to "Top for user", root_path %></li>
-      <li><%= link_to "Top for Admin", admin_root_path %></li>
-      <li><%= link_to '管理者ログアウト', destroy_admin_session_path, method: :delete, data: { confirm: 'ログアウトしますか？' } %></li>
-    </ul>
-  </nav>
+      <ul>
+        <li><%= link_to "Top for user", root_path %></li>
+        <li><%= link_to "Top for Admin", admin_root_path %></li>
+        <li><%= link_to '管理者ログアウト', destroy_admin_session_path, method: :delete, data: { confirm: 'ログアウトしますか？' } %></li>
+      </ul>
+    </nav>
   </header>
 
   <body>
