--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,6 +1,6 @@
 <!--ライフゲームエミュレート画面-->
 <%= render 'patterns/emulation' %>
-
+<%= link_to "dsf", 'https://www.amazon.co.jp/s?k=ライフゲーム' %>
 <script type="text/javascript">
   $( function() {
     // トップページのレイアウト調整
