--- a/app/assets/stylesheets/admin/homes.scss
+++ b/app/assets/stylesheets/admin/homes.scss
@@ -1,3 +1,13 @@
-// Place all the styles related to the admin/Homes controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+.homes {
+  &__top {
+    &--button {
+      width: 10em;
+      font-size: 3em !important;
+    }
+    &--body {
+      padding-top: 100px;
+      padding-bottom: 100px;
+      text-align: center;
+    }
+  }
+}
