--- a/app/assets/stylesheets/user/makings.scss
+++ b/app/assets/stylesheets/user/makings.scss
@@ -1,16 +1,47 @@
-// Place all the styles related to the Makings controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
-
 #makings__edit--update {
   display: none;
 }
 
-#making_making_text {
-  margin: 20px 0;
+.size-limit {
+  max-height: 300px;
+  max-width: 300px;
+}
+
+#crop{
+  &_area_box {
+    max-height: 50vh;
+    max-width: 50vw;
+  }
+  &_preview {
+    @extend .size-limit
+  }
+  &_preview_binarization {
+    @extend .size-limit
+  }
 }
 
 .makings {
+  &__new {
+    &--sectionA {
+      display: none;
+    }
+    &--sectionB {}
+    &--sectionC {
+      display: none;
+    }
+    &--caution {
+      color: red;
+      font-weight: 500;
+      line-height: 1.3em;
+      text-align: center;
+    }
+    &--headline {
+      display: none;
+    }
+    &--changeButton {
+      display: none;
+    }
+  }
   &__edit {
     &--top {
       margin-top: 10px;
@@ -19,8 +50,9 @@
       margin-top: 10px;
     }
     &--textarea {
-      resize: vertical;
       width: 100%;
+      margin: 20px 0;
+      resize: vertical;
     }
     &--body {
       word-wrap: break-word;
