--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>Play!Create!Publish! LifeGame</title>
+  <%= favicon_link_tag "favicon1.ico" %>
   <%= csrf_meta_tags %>
   <%= csp_meta_tag %>
   <%= stylesheet_link_tag    "user", media: "all", "data-turbolinks-track": "reload" %>
@@ -17,12 +18,9 @@
 
 <body>
   <div class="container">
-    <!--アラートセクション-->
-    <!--ページURLからアラートセクションが必要か判定-->
     <% if include_alert?( request.fullpath ) then %>
-    <div class="row">
-      <%= render 'layouts/alert' %>
-    </div>
+    <!--ページURLからアラートセクションが必要か判定-->
+    <%= render 'layouts/alert' %>
     <% end %>
 
     <!--メインセクション-->
