--- a/app/views/patterns/update.js.erb
+++ b/app/views/patterns/update.js.erb
@@ -18,5 +18,5 @@ $("#pattern_<%= column %>").addClass("application__errors--textField");
 // 作成中パターンのデータ更新成功の通知
 callMessageWindow( "success", "更新に成功しました。" );
 // 「編集完了」ボタンを「マイページ遷移」ボタンに置換する
-$('<%= link_to "戻る", pattern_path( @pattern ), class: "btn btn-success" %>').replaceAll(".patterns__edit--submit");
+$(".patterns__edit--submit").html('<%= link_to "戻る", pattern_path( @pattern ), class: "btn btn-success" %>');
 <% end %>
