--- a/app/assets/stylesheets/user/makings.scss
+++ b/app/assets/stylesheets/user/makings.scss
@@ -41,6 +41,20 @@
     &--changeButton {
       display: none;
     }
+    &--labelBox {
+      padding: 10px 20px 10px 20px;
+    }
+    &--inputLabel {
+      height: 2.5em;
+      text-align: center;
+      padding: 10px 15px 8px;
+      border-radius:4px;
+      border: 1px solid #d3d3d3;
+      background: #fff;
+      line-height: 1em;
+      cursor: pointer;
+      outline-width: 2px;
+    }
   }
   &__edit {
     &--top {
