--- a/app/views/makings/new.html.erb
+++ b/app/views/makings/new.html.erb
@@ -17,7 +17,7 @@
 <div class="col-sm-6 makings__new--sectionB">
   <h3 class="makings__new--headline">プレビュー表示</h3>
 
-  <div id="crop_preview">
+  <div id="crop_preview" overflow="hidden">
     <h3 class="makings__new--caution">
       この表示が出る場合は
       リロードしてください。
