--- a/app/assets/stylesheets/user/patterns.scss
+++ b/app/assets/stylesheets/user/patterns.scss
@@ -63,6 +63,7 @@
       }
     }
     &--lifeGameDisplay {
+      width: 100%;
       padding: 30px;
       margin: 20px auto;
       text-align: center;
@@ -70,7 +71,7 @@
       color: limegreen;
       background-color: black;
       line-height: 0.6em;
-    white-space: nowrap;
+      white-space: nowrap;
     }
     &--lifeGameInterface {
       padding: 0 20px;
