--- a/app/views/patterns/_property.html.erb
+++ b/app/views/patterns/_property.html.erb
@@ -7,7 +7,7 @@
     </li>
     <li>
       <%= content_tag :span, '', class: "glyphicon glyphicon-eye-open", aria: { hidden: true } %>
-      閲覧数: <span class="glyphicon glyphicon-warning-sign" aria-hidden="true"></span>工事中<span class="glyphicon glyphicon-warning-sign" aria-hidden="true"></span>
+      閲覧数:<%= pattern.impressionist_count %>
     </li>
     <li>
       <%= content_tag :span, '', class: "glyphicon glyphicon-comment", aria: { hidden: true } %>
