--- a/app/views/patterns/_property.html.erb
+++ b/app/views/patterns/_property.html.erb
@@ -10,7 +10,7 @@
       閲覧数:<%= pattern.preview_count %>
     </li>
     <li>
-      <%= content_tag :span, '', class: "glyphicon glyphicon-comment", aria: { hidden: true } %>
+      <%= content_tag :i, '', class: "fas fa-comment" %>
       コメント: <%= pattern.comments_count %>
     </li>
     <li>
